# matcalc

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  changes.md  citation.cff  pyproject.toml  qha.py  requirements-ci.txt  requirements.txt  requirements_torch2.txt  requirements_torch24.txt  requirements_torch26.txt  setup.py  tasks.py
.github/workflows/: lint.yml  linting.yml  release.yml  test-docker.yml  test-lammps.yml  test-models.yml  test-nbs.yml  test.yml  testing-notebooks.yml  testing.yml
benchmark_data/: README.md
dev_scripts/: Generate Element Refs.ipynb  make_elasticity.py
docs/: CNAME  _config.yml  assets  changes.md  conf.py  dev.md  index.md  matcalc._base.html  matcalc._cli.html  matcalc._elasticity.html  matcalc._eos.html  matcalc._lammps.html  matcalc._md.html  matcalc._neb.html  matcalc._phonon.html  matcalc._phonon3.html  matcalc._qha.html  matcalc._relaxation.html  matcalc._stability.html  matcalc._surface.html  matcalc.backend._ase.html  matcalc.backend._base.html  matcalc.backend._lammps.html  matcalc.backend.html  matcalc.benchmark.html  matcalc.config.html  matcalc.html  matcalc.md  matcalc.units.html  matcalc.utils.html  modules.html
docs/apidoc/: conf.py
docs/assets/: basic.css  documentation_options.js  language_data.js
docs/assets/css/: badge_only.css  theme.css
docs/tutorials/: Calculating MLIP properties.md  LiFePO4-NEB.md  NEB Calculations with MLIPs.md  Running Softening Benchmark.md  Running the MatCalc-Benchmark.md
examples/: Calculating Adsorption Energies.ipynb  Calculating MLIP properties.ipynb  LiFePO4-NEB.ipynb  MatCalc-Bench of Pre-Trained Models.ipynb  NEB Calculations with MLIPs.ipynb  NEB calculations for LiFePO4.ipynb  Running Softening Benchmark.ipynb  Running the MatCalc-Benchmark.ipynb
examples/MatCalc-Bench_data/: elastic.csv  my_elastic.csv
examples/NEB_data/: LiFePO4_supercell.cif
examples/NEB_data/traj_b_CHGNet/: image_0.traj  image_1.traj  image_2.traj  image_3.traj  image_4.traj  image_5.traj  image_6.traj  image_7.traj  image_8.traj  path_final.cif
examples/NEB_data/traj_b_M3GNet-DIRECT/: image-0.traj  image-1.traj  image-2.traj  image-3.traj  image-4.traj  image-5.traj  image-6.traj  image-7.traj  image-8.traj  image_0.traj  image_1.traj  image_2.traj  image_3.traj  image_4.traj  image_5.traj  image_6.traj  image_7.traj  image_8.traj  path_final.cif
examples/NEB_data/traj_b_M3GNet-MS/: image_0.traj  image_1.traj  image_2.traj  image_3.traj  image_4.traj  image_5.traj  image_6.traj  image_7.traj  image_8.traj  path_final.cif
examples/NEB_data/traj_c_CHGNet/: image_0.traj  image_1.traj  image_2.traj  image_3.traj  image_4.traj  image_5.traj  image_6.traj  image_7.traj  image_8.traj  path_final.cif
examples/NEB_data/traj_c_M3GNet-DIRECT/: image-0.traj  image-1.traj  image-2.traj  image-3.traj  image-4.traj  image-5.traj  image-6.traj  image-7.traj  image-8.traj  image_0.traj  image_1.traj  image_2.traj  image_3.traj  image_4.traj  image_5.traj  image_6.traj  image_7.traj  image_8.traj  path_final.cif
examples/NEB_data/traj_c_M3GNet-MS/: image_1.traj  image_2.traj  image_3.traj  image_4.traj  image_5.traj  image_6.traj  image_7.traj  image_8.traj  path_final.cif
matcalc/: __init__.py  base.py  elastic.py  elasticity.py  eos.py  neb.py  phonon.py  phonon3.py  qha.py  relaxation.py  util.py  utils.py
src/matcalc/: __init__.py  _adsorption.py  _alamode.py  _backend.py  _base.py  _cli.py  _elasticity.py  _eos.py  _fourphonon.py  _gb.py  _interface.py  _lammps.py  _md.py  _neb.py  _pheasy.py  _phonon.py  _phonon3.py  _qha.py  _relaxation.py  _stability.py  _surface.py  base.py  benchmark.py  cli.py  config.py  elasticity.py  eos.py  neb.py  phonon.py  qha.py  relaxation.py  simulation.py  stability.py  units.py  utils.py
src/matcalc/backend/: __init__.py  _ase.py  _base.py  _lammps.py
src/matcalc/lammps_templates/: md.template
tests/: conftest.py  test_adsorption.py  test_backend.py  test_backend_ase.py  test_benchmark.py  test_chain.py  test_cli.py  test_elastic.py  test_elasticity.py  test_eos.py  test_gb.py  test_interface.py  test_lammps.py  test_md.py  test_neb.py  test_notebooks.py  test_phonon.py  test_phonon3.py  test_qha.py  test_relaxation.py  test_stability.py  test_surface.py  test_util.py  test_utils.py
tests/pes/ACE-Cu-2021.5.15-PES/: README.md
tests/pes/GAP-NiMo-2020.3-PES/: README.md  gap.xml
tests/pes/M3GNet-MP-2021.2.8-PES/: README.md
tests/pes/NequIP-am-Al2O3-2023.9-PES/: README.md  default.pth
